# Praxis-Engine

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INITIAL_PROMPT.md  PROJECT.md  PROMPTS.md  README.md  STABILITY.md  pyproject.toml
.github/workflows/: ci.yml
chunks/: 00-conventions.md  01-skeleton.md  02-config-profiles.md  03-storage.md  04-transport.md  05-tools.md  06-skills.md  07-engagement-model.md  08-conversation-loop.md  09-sufficiency-gate.md  10-elicitation-planner.md  11-work-queue.md  12-wake-cycle.md  13-tui.md  14-integrations.md  15-skills-library.md  STATUS.md
docs/concepts/: agent-led-vs-reactive.md  agent-loop.md  elicitation-planner.md  engagement-model.md  optional-integrations.md  orchestrator.md  profiles-and-engagements.md  skills.md  sufficiency-gate.md  tools.md  work-queue.md
docs/how-to/: author-a-skill.md  connect-browser-harness.md  connect-confluence.md  connect-email.md  connect-jira.md  connect-local-ollama.md  connect-openrouter.md  first-chat.md  first-engagement.md  manage-the-queue.md  setup-webhooks.md  use-the-tui.md
docs/plans/: v0.2.0-tui-artifacts-config-plan.md
docs/reference/: config-schema.md  engagement-schema.md  keybinds.md  skill-format.md  starter-skills.md  storage-schema.md  sufficiency-templates.md  tool-protocol.md  transport.md
scripts/: gen_screenshots.py
skills/_test/echo-skill/: SKILL.md
skills/analysis/gap-analysis/: SKILL.md
skills/analysis/process-modeling-bpmn/: SKILL.md
skills/communication/status-report/: SKILL.md
skills/decision/adr-authoring/: SKILL.md
skills/elicitation/interview-preparation/: SKILL.md
skills/elicitation/stakeholder-analysis/: SKILL.md
skills/governance/risk-register-entry/: SKILL.md
skills/modeling/decision-matrix-construction/: SKILL.md
skills/modeling/raci-construction/: SKILL.md
skills/requirements/acceptance-criteria-gwt/: SKILL.md
src/praxis/: __init__.py  __main__.py  errors.py  logging_setup.py
src/praxis/artifacts/: __init__.py  models.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_full_engagement.py
tests/integration/: _tui_seed.py  conftest.py  test_artifact_list_profile.py  test_artifact_sufficiency_binding.py  test_artifact_viewer_regenerate.py  test_ask_engagement.py  test_ask_pii_warning.py  test_chat_message.py  test_check_hint.py  test_chunk_01.py  test_chunk_02.py  test_chunk_03.py  test_chunk_04.py  test_chunk_05.py  test_chunk_06.py  test_chunk_07.py  test_chunk_08.py  test_chunk_09.py  test_chunk_10.py  test_chunk_11.py  test_chunk_12.py  test_chunk_13.py  test_chunk_14.py  test_chunk_15.py  test_cli_error_handling.py  test_doctor_checks.py  test_engagement_audit.py  test_engagement_completeness.py  test_evidence_bundle.py  test_json_output_parseable.py  test_logging_clean_stdout.py  test_profile_resolution.py  test_queue_assignee_filter.py  test_queue_commit_message.py  test_queue_visibility.py  test_status_snapshot.py  test_sufficiency_context.py  test_tour_offline.py  test_tui_pilot.py  test_tui_wake_profile.py  (+2 more)
tests/unit/: test_agent.py  test_artifacts.py  test_atomic_write_text.py  test_audit.py  test_audit_counter.py  test_chat_runtime.py  test_config_loader.py  test_config_models.py  test_elicitation.py  test_engagement.py  test_engagement_digest.py  test_engagement_lifecycle.py  test_engagement_snapshot.py  test_integrations.py  test_orchestrator.py  test_pii_detector.py  test_pii_policy_modes.py  test_profile_create.py  test_profiles.py  test_silent_swallow_warnings.py  test_skills.py  test_smoke.py  test_storage_files.py  test_storage_repos.py  test_sufficiency.py  test_tools.py  test_transport_adapters.py  test_transport_errors.py  test_transport_models.py  test_tui.py  test_tui_smoke.py  test_workqueue.py
(+189 files in other folders)
