[project]
name = "praxis-ba"
version = "1.0.0"
description = "An agent-led framework for IT business analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Praxis Contributors" }]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "anyio>=4.4",
    "click>=8.1",
    "watchdog>=4.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
tui = ["textual>=0.79"]
jira = ["atlassian-python-api>=3.41"]
confluence = ["atlassian-python-api>=3.41"]
email = ["imap-tools>=1.7"]
webhook = ["fastapi>=0.111", "uvicorn>=0.30"]
all = ["praxis-ba[anthropic,openai,tui,jira,confluence,email,webhook]"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[project.scripts]
praxis = "praxis.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/praxis"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "praxis/_bundled_skills"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "ARG"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/praxis"]
exclude = ["src/praxis/integrations/.*", "src/praxis/tui/.*"]

[[tool.mypy.overrides]]
module = "praxis.integrations.*"
strict = false

[[tool.mypy.overrides]]
module = "praxis.tui.*"
strict = false
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=praxis --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["src/praxis"]
omit = ["src/praxis/integrations/*", "src/praxis/tui/*", "src/praxis/cli/*", "src/praxis/__main__.py"]
